<resources>
    <string name="app_name">Your Local Grocery App</string>
    <string name="background_image">Background_image</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create An Account</string>
    <string name="dont_have_an_account_yet">Dont have an account yet ?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="full_name">Enter your full name</string>
    <string name="mobile_number">10-digit mobile number</string>
    <string name="postal_code">6 digits postal code</string>
    <string name="city">City</string>
    <string name="landmark">Landmark</string>
    <string name="addr_line_2">Colony / Street / Locality</string>
    <string name="addr_line_1">Flat / House No. / Floor / Building</string>
</resources>
